index.htm small fixes of social links

--- a/index.html
+++ b/index.html
@@ -224,21 +224,16 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-	    <form action="http://alltparties.bandcamp.com/">
-              <button class="btn btn-success btn-large">Preorder</button>
-            </form>
+	    <a href="http://alltparties.bandcamp.com/" class="btn btn-success btn-large">Preorder</a>
+            
 	  </div>
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <form action="https://twitter.com/AllTParties">
-	      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            </form>
-	    <form action="https://www.facebook.com/atparties">
-	      <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-            </form>
+	    <a href="https://twitter.com/AllTParties" class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</a>
+            <a href="https://www.facebook.com/atparties" class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</a>
 	  </div>
-        </div>
+	</div>
 	   
 	  
 	<div class="span5">
