--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>All Tomorrow's Parties</h1>
+          <h1>Develop: All Tomorrow's Parties</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
