Bootstrap Blockquote fix

--- a/index.html
+++ b/index.html
@@ -125,8 +125,13 @@
       .flex-video { padding-top: 0; }
       }
       body {}
-      .names{
-      margin-left:5px;
+      .rightName{
+         margin-left:10px;
+      }
+       
+      .leftName{
+       float: left;
+       margin: 0 10px 20px 0;
       }
     </style>
 
@@ -260,12 +265,29 @@
 	  <p>
 	    This project is made to promote my friends band first album.
 	  </p>
+
+              <blockquote class="pull-right rightName">
+	        <p>Wladek Sheen</p>
+		<small><cite>Vocals, guitars, keys</cite> </small>
+	      </blockquote>
+
 	  <p> 
 	    All Tomorrow's Parties is a young <strong>indie rock band</strong> based in Moscow, Russia. Their sound is a <strong>fusion of garage rock and psychedelic rock</strong>.
 	  </p>
+	      <blockquote class="leftName">
+	        <p>Vadim Tikhonov</p>
+		<small><cite>Vocals, guitars</cite> </small>
+	      </blockquote>
+	      
+
 	  <p>
 	     ATP gathered in summer 2011 in Tashkent, Uzbekistan and soon the band began to gain underground popularuty performing in clubs, pubs and rock oriented venues of their hometown.
 	  </p>
+	      <blockquote class="pull-right rightName">
+		<p>Ruslan Tikhonov</p>
+		<small><cite>bass guitar</cite> </small>
+	      </blockquote>
+
 	  <p>	    
 	    In 2012 All Tomorrow's Parties took the <strong>first place in the rock bands contest</strong> organized by local promo Iosis Fest - Become a  and won the right to record a single in Iosis Studio. 
 	  </p>
