--- a/index.html
+++ b/index.html
@@ -244,18 +244,17 @@
           </div>
           <div class="row-fluid">
           <div class="span8 offset2 social">
+
 	    <!-- AddThis Button BEGIN -->
 	    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-	      <a class="addthis_button_preferred_1"></a>
-	      <a class="addthis_button_preferred_2"></a>
+	      <a class="addthis_button_facebook"></a>
+	      <a class="addthis_button_twitter"></a>
 	      <a class="addthis_button_compact"></a>
 	      <a class="addthis_counter addthis_bubble_style"></a>
 	    </div>
-	    <script type="text/javascript">var addthis_config = 
-	      {"data_track_addressbar":true};</script>
-	    <script type="text/javascript" 
-		    src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51e5f5d9549fdf9b"></script>
-	    <!-- AddThis Button END -->       
+	    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+	    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4da0b1f06701ec3e"></script>
+	    <!-- AddThis Button END -->
             <!--<a href="https://twitter.com/AllTParties" class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</a>-->
             <!--<a href="https://www.facebook.com/atparties" class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</a>-->
 	  
@@ -394,5 +393,15 @@
         </div>
       </div>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-42922550-1', 'herokuapp.com');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
