--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button" data-code="17990bf381227913b888de54a0e29077" data-button-style="custom_large" href="https://coinbase.com/checkouts/17990bf381227913b888de54a0e29077">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+	    
           </div>
           </div>
           <div class="row-fluid">
